# cardmage

./: .gitignore  Changelog.rst  MANIFEST.in  Motivation.rst  Readme.rst  pyproject.toml  requirements.txt  setup.py
cardmage/: __init__.py  __main__.py
docs/: CardContents.rst  CardSetup.rst  ConfigReference.rst  Features.rst  Motivation.rst  ProjectSetup.rst  Translations.rst  Usage.rst
testdata/: demo.output.json  demo.toml  settings.toml
testdata/cards/: B_Aetheriumschmiede.toml  C_Mora.toml  O_OgInfinium.toml  demo.toml
testdata/fonts/: SIL Open Font License.txt  standard.toml
testdata/icons/: standard.toml
testdata/layouts/: bezirk.toml  neutral.toml  neutralC.toml  objekt.toml  standard.toml
testdata/translations/: B_Aetheriumschmiede.toml  O_OgInfinium.toml
